--- a/src/App.css
+++ b/src/App.css
@@ -10,22 +10,5 @@ ul li {
   'n c';
   grid-template-rows: 60px 1fr;
   grid-template-columns: 2fr 10fr;
-  /* grid-gap: 10px; */
-}
-
-.header {
-  background-color: rgb(133, 228, 133);
-  grid-area: h;
-}
-.header img {
-  width: 20px;
-}
-.nav {
-  grid-area: n;
-  background-color: burlywood;
-}
-
-.content {
-  grid-area: c;
-  background-color: rgb(144, 144, 231);
+  grid-gap: 10px;
 }
