--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,20 @@
 ul li {
-  list-style-type: georgian;
+    list-style-type: georgian;
 }
+
 .app-wrapper {
-  margin: 0 auto;
-  display: grid;
-  width: 1250px;
-  grid-template-areas:
+    margin: 0 auto;
+    display: grid;
+    width: 1250px;
+    grid-template-areas:
   'h h'
   'n c';
-  grid-template-rows: 60px 1fr;
-  grid-template-columns: 2fr 10fr;
-  grid-gap: 10px;
+    grid-template-rows: 60px 1fr;
+    grid-template-columns: 2fr 10fr;
+    grid-gap: 10px;
+}
+
+.app-wrapper-content {
+    grid-area: c;
+    background-color: rgb(144, 144, 231);
 }
