--- a/src/components/Dialogs/Dialogs.module.css
+++ b/src/components/Dialogs/Dialogs.module.css
@@ -8,6 +8,7 @@
 
 .dialogsItems {
     padding: 10px;
+    color: white;
 }
 
 .dialogsItems .active {
@@ -19,5 +20,6 @@
 
 }
 
-.message {
+.messages .message {
+    color: white;
 }
